Squashed commit of the following:
commit 4a52df7ca391f172799d06013f2aa3761aaee5cf
Merge: 92c16de 4cb13cf
Author: Adrien Jeser <adrien.jeser@doctolib.com>
Date:   Tue Jul 26 14:16:01 2022 +0200

    Merge branch 'mob/BICS-896' of github.com:Nao-ris/couchbase-lite-rust into mob/BICS-896

commit 92c16de115f119d38188788fa56297a80c5f5e82
Author: Adrien Jeser <adrien.jeser@doctolib.com>
Date:   Tue Jul 26 14:15:41 2022 +0200

    mob next [ci-skip] [ci skip] [skip ci]

    lastFile:src/fleece.rs

commit 4cb13cfee835f3fd32454813b805df20701721be
Author: xdm67x <mehmet.ozkan@doctolib.com>
Date:   Tue Jul 26 11:47:09 2022 +0200

    mob next [ci-skip] [ci skip] [skip ci]

    lastFile:build.rs

commit 86e83f5a3fbcc09af3f4542ec922847159f044ee
Author: xdm67x <mehmet.ozkan@doctolib.com>
Date:   Tue Jul 26 11:40:12 2022 +0200

    mob next [ci-skip] [ci skip] [skip ci]

    lastFile:Cargo.toml

commit 8bb850d9996c6392c0fbf44024d14f95984c045d
Author: xdm67x <mehmet.ozkan@doctolib.com>
Date:   Tue Jul 26 11:31:07 2022 +0200

    mob next [ci-skip] [ci skip] [skip ci]

    lastFile:tests/replicator_tests.rs

Co-authored-by: Adrien Jeser <adrien.jeser@doctolib.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ enum_primitive = "*"
 tempdir = "*"
 lazy_static = "1.4.0"
 
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
+
 [build-dependencies]
 bindgen = "0.53.1"
 
