[BICS-917] CI + Clean (#13)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ lto = true
 codegen-units = 1
 incremental = false
 # See: https://github.com/johnthagen/min-sized-rust
+
+[features]
+flaky-test = []
+unsafe-threads-test = []
