--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,10 +12,12 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - name: Install apt-get
       run: sudo apt-get install -y clang llvm libicu66
+    - name: List libs
+      run: ls -l /usr/lib
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
       with:
