--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -3,7 +3,7 @@ name: Clippy check
 
 env:
   CARGO_TERM_COLOR: always
-  LIBCLANG_PATH: /usr/lib/llvm-11/lib/
+  LIBCLANG_PATH: /usr/lib/llvm/lib/
 
 jobs:
   clippy_check:
