--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -3,14 +3,14 @@ name: Clippy check
 
 env:
   CARGO_TERM_COLOR: always
-  LIBCLANG_PATH: /usr/lib/llvm/lib/
+  LIBCLANG_PATH: /usr/lib/llvm-12/lib/
 
 jobs:
   clippy_check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: rustup component add clippy && ls /usr/lib
+      - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
